--- a/client/src/components/Fireteam/Fireteam.css
+++ b/client/src/components/Fireteam/Fireteam.css
@@ -68,6 +68,7 @@
     height: 20%;
     font-weight: 220;
     text-align: center;
+    margin-bottom: 5%;
 }
 
 .right-col-fireteam-member-list {
